# Swarm

./: .gitignore  CLAUDE.md  MAKER.md  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/git/: ci_describe_pr.md  describe_pr.md
.claude/commands/planning/: extract_conventions.md  implement_plan.md  plan.md
.claude/commands/research/: docs.md  research_codebase.md
.claude/commands/workflow/: create_handoff.md  resume_handoff.md
src/swarmmaker/: __init__.py  __main__.py  calibration.py  callbacks.py  cli.py  completeness.py  composer.py  config.py  consensus.py  decomposer.py  discriminator.py  domain_state.py  finalizer.py  graph.py  io.py  llm.py  math_constraints.py  orchestrator.py  policies.py  progress.py  red_flag.py  router.py  schemas.py  solver.py  termination.py  verify.py  voting.py
src/swarmmaker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/swarmmaker/adapters/: __init__.py  base.py  default.py  math.py
